--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Profile.html
@@ -18,56 +18,34 @@
     </div>
     <hr>
     <br>
-<!-- MAIN CARDS STARTS HERE -->
-    <div class="row">
-        <div class="col-xl-3 col-md-4">
-            <div class="card text-dark bg-light mb-4">
-                <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-check" style="color: green; position:relative; margin-right:10px;"></i>Total No. of Validated BHW</div>
-                <div class="card-body">
-                    <h5 class="card-title">200</h5>
+<!-- DataTables -->
+    <div class="container text-black">
+        <div class="row">
+            <div class="col">
+                <div class="table-responsive">
+                    <table class="table table-sm" id="table_applicants">
+                        <thead>
+                            <tr>
+                                <th scope="col">No.</th>
+                                <th scope="col">Barangay</th>
+                                <th scope="col">Guardian Name</th>
+                                <th scope="col">Child Name</th>
+                                <th scope="col">Date of Birth</th>
+                                <th scope="col">Date Measured</th>
+                                <th scope="col">Gender</th>
+                                <th scope="col">Weight</th>
+                                <th scope="col">Height</th>
+                                <th scope="col">Age in Months</th>
+                                <th scope="col">WFA Status</th>
+                                <th scope="col">HFA Status</th>
+                                <th scope="col">WHFA Status</th>
+                                <th scope="col" class="nosort text-center">Action</th>
+                            </tr>
+                        </thead>
+                    </table>
                 </div>
             </div>
         </div>
-        <div class="col-xl-3 col-md-4">
-            <div class="card text-dark bg-light mb-4">
-                <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-spinner" style="color:orange; position:relative; margin-right:10px;"></i>Total No. of Non-Validated BHW</div>
-                <div class="card-body">
-                    <h5 class="card-title">200</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-3 col-md-4">
-            <div class="card text-dark bg-light mb-4">
-                <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user"></i>Total No. of Parents</div>
-                <div class="card-body">
-                    <h5 class="card-title">200</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-3 col-md-4">
-            <div class="card text-dark bg-light mb-4">
-                <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user-circle"></i>Total Number of Preschoolers</div>
-                <div class="card-body">
-                    <h5 class="card-title">200</h5>
-                </div>
-            </div>
-        </div>
-
-        <main>
-            <div class="container-fluid px-4">
-                <div class="card text-dark mb-4">
-                    <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)">
-                        <i class="fas fa-chart-pie me-1"></i> Pie Chart 
-                    </div>
-                    <div class="row g-0">
-                        <div class="col-md-12">
-                            <canvas id="myPieChart" width="100%" height="40"></canvas>
-                        </div>
-                    </div>
-                    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                </div>
-            </div>
-        </main>
     </div>
     <hr>
     <br>
