--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -101,62 +101,27 @@
         </div>
         <hr>
         <br>
-          <!-- MAIN CARDS STARTS HERE -->
-          <div class="row">
-              <div class="col-xl-3 col-md-4">
-                  <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-check" style="color: green; position:relative; margin-right:10px;"></i>Total No. of Validated BHW</div>
-                      <div class="card-body">
-                          <h5 class="card-title">200</h5>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-md-4">
-                  <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-spinner" style="color:orange; position:relative; margin-right:10px;"></i>Total No. of Non-Validated BHW</div>
-                      <div class="card-body">
-                          <h5 class="card-title">200</h5>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-md-4">
-                  <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user"></i>Total No. of Parents</div>
-                      <div class="card-body">
-                          <h5 class="card-title">200</h5>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-xl-3 col-md-4">
-                  <div class="card text-dark bg-light mb-4">
-                      <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)"><i class="fas fa-user-circle"></i>Total Number of Preschoolers</div>
-                      <div class="card-body">
-                          <h5 class="card-title">200</h5>
-                      </div>
-                  </div>
-              </div>
-
-              <main>
-                  <div class="container-fluid px-4">
-                      <div class="card text-dark mb-4">
-                          <div class="card-header" style="background-color:rgba(0, 255, 85, 0.205)">
-                              <i class="fas fa-chart-pie me-1"></i> Pie Chart 
-                          </div>
-                          <div class="row g-0">
-                              <div class="col-md-12">
-                                  <canvas id="myPieChart" width="100%" height="40"></canvas>
-                              </div>
-                          </div>
-                          <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                      </div>
-                  </div>
-              </main>
-          </div>
-      </div>
-  </div>
+        <!-- MAIN CARDS STARTS HERE -->
+        <div class="row">
+            <div class="col-md-6 col-lg-4">
+                <div class="card mb-3 widget-chart text-left">
+                    <div class="icon-wrapper rounded-circle">
+                        <div class="icon-wrapper-bg bg-primary"></div>
+                        <i class="lnr-cog text-primary"></i>
+                    </div>
+                    <div class="widget-chart-content">
+                        <div class="widget-subheading">Total Views</div>
+                        <div class="widget-numbers">45.8k</div>
+                        <div class="widget-description text-success">
+                        <i class="fa fa-angle-up "></i>
+                        <span class="pl-1">175.5%</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 <!-- Form-->
 
-    <!-- Footer -->
+<!-- Footer -->
 <div class="site-footer" id="footer" style="background-color: rgb(255, 255, 255);">
   <div class="container">
       <div class="row">
