--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+    <script src="fstdropdown.js"></script>
+    <link rel="stylesheet" href="fstdropdown.css">
     <title>Preschoolers Profiling and Monitoring System</title>
 </head>
 <body>
@@ -68,6 +70,40 @@
                             {{ form.user_type }}
                             <br>
                         </div>
+
+                        <div class="input-group mb-3">
+                            <label for="">Barangay</label>
+                            <select class="fstdropdown-select" id="brgy">  
+                                <option value="">Select Barangay</option>
+                                <option value="">Burol</option>
+                                <option value="">Burol I</option>
+                                <option value="">Burol II</option>
+                                <option value="">Burol III</option>
+                                <option value="">Datu Esmael</option>
+                                <option value="">Emmanuel Bergado I</option>
+                                <option value="">Emmanuel Bergado II</option>
+                                <option value="">Fatima I</option>
+                                <option value="">Fatima II</option>
+                                <option value="">Fatima III</option>
+                                <option value="">H_2</option>
+                                <option value="">Langkaan I</option>
+                                <option value="">Langkaan II</option>
+                                <option value="">Luzviminda I</option>
+                                <option value="">Luzviminda II</option>
+                                <option value="">Paliparan I</option>
+                                <option value="">Paliparan II</option>
+                                <option value="">Paliparan III</option>
+                                <option value="">Sabang</option>
+                                <option value="">Saint Peter I</option>
+                                <option value="">Saint Peter II</option>
+                                <option value="">Salawag</option>
+                                <option value="">Salitran I</option>
+                                <option value="">Salitran II</option>
+                                <option value="">Salitran III</option>
+                                <option value="">Salitran IV</option>
+                            </select>
+                            <br>
+                        </div>
                         
                         <div class="form-group">
                             <div class="row">
@@ -81,7 +117,7 @@
                                 </div>
                             </div>
                         </div>
-                
+                        
                         <div class="form-group">
                             <label for="">Email Address</label>
                             {{ form.email }}
@@ -114,9 +150,8 @@
             <div class="row">
                 <div class="col-lg-4">
                     <h2 class="footer-heading mb-4">About</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus 
-                        ducimus architecto fugiat!
+                    <p>The NNC, as mandated by law, is the country's highest policy-making 
+                        and coordinating body on nutrition.
                     </p>
                     <div class="my-5">
                         <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
