--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -25,7 +25,7 @@
           </a>
         </div>
         <div class="dropdown">
-          <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"><i class="fa fa-fw fa-user"></i>BHW</button>
+          <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px"><i class="fa fa-fw fa-user"></i>BHW</button>
           <ul class="dropdown-menu" id="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
           </ul>
