--- a/ppms_project/profilingApp/static/CSS/styles.css
+++ b/ppms_project/profilingApp/static/CSS/styles.css
@@ -151,7 +151,7 @@ i {
 
 #dropdown-menu li:hover a {
   padding-left: 18px;
-  background-color: rgba(255, 255, 255, 0.829);
+  background-color: #188045;
   color: #FFFF;
   transition: 0.4s;
 }
