--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -34,7 +34,7 @@
         </a>
       </div>
       <div class="dropdown">
-        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px; color:#ffe77aff"> <i class="fa fa-fw fa-user"></i>Admin</button>
+        <button class="btn dropdown-toggle" type="button" id= "Headerddb" data-bs-toggle="dropdown" style="margin-right:15px"> <i class="fa fa-fw fa-user"></i>Admin</button>
         <ul class="dropdown-menu" id="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
         </ul>
@@ -119,7 +119,7 @@
 <!-- Form-->
 
     <!-- Footer -->
-<div class="site-footer" id="footer">
+<div class="site-footer">
   <div class="container">
       <div class="row">
           <div class="col-lg-4">
