--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
-    <script src="fstdropdown.js"></script>
-    <link rel="stylesheet" href="fstdropdown.css">
+    <script src="{% static '/Javascript/js/fstdropdown.js' %}"></script>
+    <link rel="stylesheet" href="{% static '/CSS/css/fstdropdown.css' %}">
     <title>Preschoolers Profiling and Monitoring System</title>
 </head>
 <body>
@@ -75,32 +75,32 @@
                             <label for="">Barangay</label>
                             <select class="fstdropdown-select" id="brgy">  
                                 <option value="">Select Barangay</option>
-                                <option value="">Burol</option>
-                                <option value="">Burol I</option>
-                                <option value="">Burol II</option>
-                                <option value="">Burol III</option>
-                                <option value="">Datu Esmael</option>
-                                <option value="">Emmanuel Bergado I</option>
-                                <option value="">Emmanuel Bergado II</option>
-                                <option value="">Fatima I</option>
-                                <option value="">Fatima II</option>
-                                <option value="">Fatima III</option>
-                                <option value="">H_2</option>
-                                <option value="">Langkaan I</option>
-                                <option value="">Langkaan II</option>
-                                <option value="">Luzviminda I</option>
-                                <option value="">Luzviminda II</option>
-                                <option value="">Paliparan I</option>
-                                <option value="">Paliparan II</option>
-                                <option value="">Paliparan III</option>
-                                <option value="">Sabang</option>
-                                <option value="">Saint Peter I</option>
-                                <option value="">Saint Peter II</option>
-                                <option value="">Salawag</option>
-                                <option value="">Salitran I</option>
-                                <option value="">Salitran II</option>
-                                <option value="">Salitran III</option>
-                                <option value="">Salitran IV</option>
+                                <option value="1">Burol</option>
+                                <option value="2">Burol I</option>
+                                <option value="3">Burol II</option>
+                                <option value="4">Burol III</option>
+                                <option value="5">Datu Esmael</option>
+                                <option value="6">Emmanuel Bergado I</option>
+                                <option value="7">Emmanuel Bergado II</option>
+                                <option value="8">Fatima I</option>
+                                <option value="9">Fatima II</option>
+                                <option value="10">Fatima III</option>
+                                <option value="11">H_2</option>
+                                <option value="12">Langkaan I</option>
+                                <option value="13">Langkaan II</option>
+                                <option value="14">Luzviminda I</option>
+                                <option value="15">Luzviminda II</option>
+                                <option value="16">Paliparan I</option>
+                                <option value="17">Paliparan II</option>
+                                <option value="18">Paliparan III</option>
+                                <option value="19">Sabang</option>
+                                <option value="20">Saint Peter I</option>
+                                <option value="21">Saint Peter II</option>
+                                <option value="22">Salawag</option>
+                                <option value="23">Salitran I</option>
+                                <option value="24">Salitran II</option>
+                                <option value="25">Salitran III</option>
+                                <option value="26">Salitran IV</option>
                             </select>
                             <br>
                         </div>
