--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -119,7 +119,7 @@
 <!-- Form-->
 
     <!-- Footer -->
-<div class="site-footer">
+<div class="site-footer" id="footer">
   <div class="container">
       <div class="row">
           <div class="col-lg-4">
