--- a/ppms_project/profilingApp/static/CSS/css/fstdropdown.css
+++ b/ppms_project/profilingApp/static/CSS/css/fstdropdown.css
@@ -11,12 +11,11 @@
 }
 .fstdropdown {
     vertical-align: middle;
-    border: 1px solid #ccc;
     border-radius: 4px;
     cursor: pointer;
     font-family: inherit;
     font-size: inherit;
-    background: white;
+    background: rgb(30, 131, 64);
     overflow: hidden;
     width: inherit
 }
@@ -27,15 +26,14 @@
     .fstdropdown > .fstselected {
         line-height: 1.42857143;
         padding: 6px 24px 6px 12px;
-        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-        color: #555;
-        font-size: 14px;
+        color: #FFFFFF;
+        min-height: 100%;
+        font-size: inherit;
         outline: 0;
         position: relative;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        -webkit-user-select: none;
     }
 
         .fstdropdown > .fstselected::after {
@@ -46,7 +44,7 @@
             margin-top: -3px;
             content: ' ';
             right: 11px;
-            border-color: #999 transparent transparent;
+            border-color: #FFFFFF transparent transparent;
             border-style: solid;
             border-width: 4px 4px 0;
         }
@@ -59,7 +57,7 @@
 
         .fstdropdown.open > .fstselected::after {
             margin-top: -3px;
-            border-color: transparent transparent #999;
+            border-color: transparent transparent #FFFFFF;
             border-width: 0 4px 4px;
         }
 
@@ -77,15 +75,13 @@
 .fstlist > div {
     padding: 6px 12px;
     user-select: none;
+    background-color: rgb(229, 229, 229);
+    color: rgb(93, 93, 93);
     -webkit-user-select: none;
-    border-bottom: 1px solid #f5f5f5;
 }
 
 .fstdropdown.open:hover {
-    border-color: #66afe9;
     overflow-x: hidden;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
     -o-transition: border-color ease-in-out .1s,box-shadow ease-in-out .1s;
     -webkit-transition: border-color ease-in-out .1s,-webkit-box-shadow ease-in-out .1s;
     transition: border-color ease-in-out .1s,-webkit-box-shadow ease-in-out .1s;
@@ -94,23 +90,22 @@
 }
 
 .fstlist > div:hover {
-    color:rgba(255, 255, 255, 0.253);
-    color: #fff;
+    background-color: rgba(118, 118, 118);
+    color: #FFFFFF;
 }
 
 .fstlist > div.selected {
-    background-color: #cdcdcd;
-    color: #262626;
+    background-color: rgba(118, 118, 118);
+    color: #FFFFFF;
 }
 
 .fstsearchinput {
     padding: 4px;
     width: 100%;
     box-sizing: border-box;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     background-color: #fff;
     border: 1px solid #ccc;
-    color: #555;
+    color: #000000;
     font-size: 14px;
     display: none;
 }
@@ -131,7 +126,6 @@
 .fstAll {
     width: 100%;
     position: relative;
-    background-color: #0090ff;
     color: #fff;
     border: 0;
     font-size: 14px;
