--- a/ppms_project/profilingApp/templates/activities/login_registration.html
+++ b/ppms_project/profilingApp/templates/activities/login_registration.html
@@ -73,7 +73,8 @@
 
                         <div class="input-group mb-3">
                             <label for="">Barangay</label>
-                            <select class="fstdropdown-select" id="brgy">  
+                            {{ form.barangay }}
+                            <!-- <select class="fstdropdown-select" id="brgy">  
                                 <option value="">Select Barangay</option>
                                 <option value="1">Burol</option>
                                 <option value="2">Burol I</option>
@@ -101,7 +102,7 @@
                                 <option value="24">Salitran II</option>
                                 <option value="25">Salitran III</option>
                                 <option value="26">Salitran IV</option>
-                            </select>
+                            </select> -->
                             <br>
                         </div>
                         
