--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -48,6 +48,7 @@
   <ul class="list-unstyled ps-0">
       <div class="buttons">
           <a id="home" href="{% url 'admin_home' %}"><i class="fa fa-fw fa-home"></i>Home</a>
+          <a href="{% url 'admin_home2' %}"><i class="fa fa-fw fa-user-nurse"></i>Home2</a>
           <a href="{% url 'bhw_validation' %}"><i class="fa fa-fw fa-user-nurse"></i>Validate BHW</a>
       </div>
       <br>
@@ -196,7 +197,8 @@
 
 </script>
 </body>
-
+<script src="jq/jquery-2.1.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="{% static '/Javascript/testscript.js' %}"></script>
 </html>
