--- a/ppms_project/profilingApp/templates/activities/Admin Home2.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home2.html
@@ -5,7 +5,7 @@
 <div id="grid" class="container-fluid" style="padding:7%; margin-top:0px;">
     <div class="container">
         <div class="container">
-            <div class="row"> 
+            <div class="row justify-content-between"> 
                 <div class="col-5">
                     <h3 style="text-align:left;"> Preschooler Dashboard</h3>
                 </div>
@@ -28,7 +28,7 @@
                 </div>
                 <hr>
                 </div>
-            </div>
+        </div>
             
             <div class="row">
                     <div class="col">
