--- a/ppms_project/profilingApp/templates/activities/Unvalidated Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Unvalidated Profile.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% block dashboard %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    
+    <title>Validate</title>
 
     <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
@@ -31,7 +30,7 @@
             <div class="container-fluid">
                 <div>
                     <a href="#" class="name" style="text-decoration: none;">
-                        <img class="navbar-icon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
+                        <img class="navbar-icon" style="margin-left:15px;" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
                         <span id="hidetitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas</span>
                     </a>
                 </div>
@@ -73,7 +72,7 @@
                                     <p class="mb-0">Full Name</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">Johnatan Smith</p>
+                                    <p class="text-muted mb-0">{{ unva_bhw.user.first_name }} {{ unva_bhw.user.last_name }}</p>
                                 </div>
                             </div>
                             <hr>
@@ -82,7 +81,7 @@
                                     <p class="mb-0">Email</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">example@example.com</p>
+                                    <p class="text-muted mb-0">{{ unva_bhw.user.email }}</p>
                                 </div>
                             </div>
                             <hr>
@@ -97,45 +96,23 @@
                             <hr>
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <p class="mb-0">Mobile</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0">(098) 765-4321</p>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <p class="mb-0">Address</p>
-                                </div>
-                                <div class="col-sm-9">
-                                    <p class="text-muted mb-0">Dasmarinas cavite</p>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="col-sm-3">
                                     <p class="mb-0">Designated Barangay</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">San Andress</p>
+                                    <p class="text-muted mb-0">{{ unva_bhw.bhw_barangay }}</p>
                                 </div>
                             </div>
                             <hr>
+
+                        <form method="POST">
+                            {% csrf_token %}
+                            
                             <div class="row">
                                 <div class="col-sm-3">
                                     <p class="mb-0">Validation Status</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <div class="dropdown">
-                                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            Unassigned
-                                        </button>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                            <button class="dropdown-item" type="button">Validate</button>
-                                            <button class="dropdown-item" type="button">Unvalidate</button>
-                                         </div>
-                                    </div>
+                                    {{ form.is_validated }}
                                 </div>
                             </div>
                         </div>
@@ -144,8 +121,9 @@
             </div>
         </div>
         <div class="text-center">
-            <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">Delete Profile</button></a>
+            <input type="submit" name="save_bhw" style="background-color: #188045; color: white;" class="btn" value="Save">
         </div>
+        </form>
         <hr>
     </div>
     
@@ -208,5 +186,3 @@
     </div>
 </body>
     
-
-{% endblock %}
